Adjust padding in RTL and add solid border in notifier settings.

This CL makes following changes:
- Adds solid border under the button bar in notifier settings.
- Adds padding to "Allow notifications from the following" label
  so that it would be shown correctly in RTL languages.

TEST=manual, both in English and Hebrew (RTL)
BUG=784694,779881

Change-Id: Ic815847cdc752bb6f89dbd60b038607e7219ed83
Reviewed-on: https://chromium-review.googlesource.com/768324
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#516583}
Former-commit-id: 4351d6de273e5983e8212603083ce632e0f6cad2